feat: user data and fields validation treatment

--- a/app/views/cadastro.ejs
+++ b/app/views/cadastro.ejs
@@ -33,7 +33,7 @@
 	    	<div class="erros">
 				<% if (erros.length > 0) { %>
 				<div class="alert alert-danger" role="alert">
-					Um ou mais erros foram detectados, veja abaixo <br />
+					<span style="font-weight: bold;">Um ou mais erros foram detectados, veja abaixo</span> <br />
 					<ul>
 						<% erros.forEach(function(erro){  %>
 							<li>
